tests/ui/substrate/implementation/fail_weight_without_dispatch.stderr
error: unable to find "dispatch" attribute
  --> tests/ui/substrate/implementation/fail_weight_without_dispatch.rs:18:12
   |
18 |     #[obce(weight())]
   |            ^^^^^^^^
